test_regress/t/t_covergroup_in_class_duplicate_bad.out
%Error: t/t_covergroup_in_class_duplicate_bad.v:12:14: Duplicate declaration of CLASS '__vlAnonCG_embeddedCg': '__vlAnonCG_embeddedCg'
   12 |   covergroup embeddedCg;
      |              ^~~~~~~~~~
        t/t_covergroup_in_class_duplicate_bad.v:8:14: ... Location of original declaration
    8 |   covergroup embeddedCg;
      |              ^~~~~~~~~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
