test_regress/t/t_covergroup_in_class_duplicate_bad.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2025 by Antmicro.
// SPDX-License-Identifier: CC0-1.0

/* verilator lint_off COVERIGN */
class myClass;
    covergroup embeddedCg;

    endgroup

    covergroup embeddedCg;

    endgroup
endclass
